# ITSaNAS

./: .gitignore  ARCHITECTURE.md  CLA.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  STATUS.md  TESTING.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  cla.yml  release.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/itsanas/client/: DaemonViewModel.kt  MainActivity.kt  Screens.kt
android/app/src/main/java/com/itsanas/client/network/: DaemonApi.kt  Models.kt  RetrofitClient.kt  UriRequestBody.kt
android/app/src/main/res/values/: strings.xml
android/logic-tests/: build.gradle.kts  settings.gradle.kts
android/logic-tests/src/test/kotlin/com/itsanas/client/network/: ContractTest.kt
crates/itsanas-chunking/: Cargo.toml
crates/itsanas-chunking/src/: chunk_id.rs  chunker.rs  lib.rs  verify.rs
crates/itsanas-cli/: Cargo.toml  README.md
crates/itsanas-cli/src/: lib.rs
crates/itsanas-crypto/: Cargo.toml
crates/itsanas-crypto/src/: cipher.rs  error.rs  identity.rs  kdf.rs  lib.rs  wrap.rs
crates/itsanas-daemon/: Cargo.toml  README.md
crates/itsanas-daemon/src/: account.rs  error.rs  hex.rs  http.rs  lib.rs  main.rs  scrub.rs  state.rs  sync.rs  vault.rs
crates/itsanas-gui/: Cargo.toml
crates/itsanas-gui/src/: main.rs
crates/itsanas-net/: Cargo.toml  README.md
crates/itsanas-net/src/: connectivity.rs  error.rs  invite.rs  lib.rs  node.rs  protocol.rs  relay.rs
crates/itsanas-net/tests/: lan_store_retrieve.rs
crates/itsanas-quota/: Cargo.toml  README.md
crates/itsanas-quota/src/: lib.rs
crates/itsanas-receipt/: Cargo.toml  README.md
crates/itsanas-receipt/src/: main.rs  scenario.rs
crates/itsanas-repair/: Cargo.toml  README.md
crates/itsanas-repair/src/: lib.rs  mirror.rs  scrub.rs
crates/itsanas-storage/: Cargo.toml  README.md
crates/itsanas-storage/src/: error.rs  hex.rs  lib.rs  root.rs
crates/itsanas-testkit/: Cargo.toml  README.md
crates/itsanas-testkit/src/: lib.rs
docs/: OVERVIEW.md
packaging/windows/: installer.nsi
scripts/: ci.sh  package-windows-installer.sh  receipt.sh  release.sh  smoke-e2e-windows.sh  smoke-e2e.sh  test-android-logic.sh  test-windows-installer.sh  test-windows.sh
scripts/relay/: README.md  itsanas-relay.service  relay.example.toml
