[package]
name = "itsanas-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Encryption, key derivation, identities, and key wrapping for ITSaNAS"

[lints]
workspace = true

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
