[package]
name = "itsanas-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop companion app: account setup/unlock and synced-folder status for itsanas-daemon"

[lints]
workspace = true

[[bin]]
name = "itsanas-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
# Tests boot the real itsanas-daemon router (not a mock) on an in-process
# ephemeral port, for maximum fidelity against what the GUI actually talks
# to in production.
itsanas-daemon = { path = "../itsanas-daemon" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
