[package]
name = "itsanas-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "P2P transport, discovery, and relay for ITSaNAS"

[lints]
workspace = true

[dependencies]
itsanas-chunking = { path = "../itsanas-chunking" }
itsanas-storage = { path = "../itsanas-storage" }
itsanas-crypto = { path = "../itsanas-crypto" }
iroh = "1"
ed25519-dalek = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "1"
itsanas-testkit = { path = "../itsanas-testkit", optional = true }

[features]
test-mode = ["dep:itsanas-testkit", "itsanas-storage/test-mode"]

[dev-dependencies]
tempfile = "3"
iroh = { version = "1", features = ["test-utils"] }
