[package]
name = "itsanas-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local storage root management and shard I/O for ITSaNAS"

[lints]
workspace = true

[dependencies]
itsanas-chunking = { path = "../itsanas-chunking" }
thiserror = "1"
itsanas-testkit = { path = "../itsanas-testkit", optional = true }

[features]
test-mode = ["dep:itsanas-testkit"]

[dev-dependencies]
tempfile = "3"
